Core hacks for new tutorial version

--- a/www/config.php.example
+++ b/www/config.php.example
@@ -8,5 +8,5 @@ $config['file_storage_path'] = "/var/lib/groupoffice";
 $config['tmpdir'] = "/tmp/groupoffice";
 $config['debug'] = false;
 
-// Some servers don't support simultanous connections. Then SSE has to be disabled.
+// Some servers don't support simultaneous connections. Then SSE has to be disabled.
 $config['sseEnabled'] = true;
